[package]
name = "chakracore-sys"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.56.0"

[lib]
# disable doc tests since the docs have C++ code
doctest = false
